--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,3 +72,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: sopaipilleros
+    ports:
+      - 27017:27017
