--- a/stock/package.json
+++ b/stock/package.json
@@ -14,6 +14,7 @@
         "express": "^4.18.1",
         "kafkajs": "^2.0.0",
         "mongodb": "^4.11.0",
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.16",
+        "pg": "^8.8.0"
     }
 }
